# ML_HAL_Prototype

./: README.md  pyproject.toml  requirements-full.txt  requirements.txt
examples/: benchmark_inference.py  train_pytorch_mlp.py
scripts/: build_hal.ps1  build_hal.sh
src/backends/: pytorch_backend.py
src/hal/: __init__.py  dispatcher.py  py_hal.py
src/hal/cpp/: CMakeLists.txt  hal_ext.cpp
src/runtime/: device.py  scheduler.py
tests/: test_hal_linear.py
